fixed spacing on login page

--- a/public/css/landingPages/homePage/differentiatorsCard.css
+++ b/public/css/landingPages/homePage/differentiatorsCard.css
@@ -78,7 +78,7 @@
 
 .subtext{
     font-size: 40px;
-    line-height: 51px;
+    line-height: 60px;
     margin-left: 20px;
     margin-top: 0px;
     margin-bottom: 0px;
